--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-<meta http-equiv = "refresh" content = "0; url = http://34.80.160.234:8000/idiom_form" />
+<meta http-equiv = "refresh" content = "0; url = http://35.203.185.15:8000" />
